--- a/LaunchAgents/syncAppium.plist
+++ b/LaunchAgents/syncAppium.plist
@@ -9,10 +9,10 @@
 			<string>/bin:/usr/bin:/usr/local/bin:/usr/sbin:/sbin</string>
 		</dict>
 		<key>Label</key>
-		<string>com.syncDevices</string>
+		<string>com.zebrunner.mcloud.appium</string>
 		<key>ProgramArguments</key>
 		<array>
-                	<string>/Users/build/tools/mcloud/syncDevices.sh</string>
+                	<string>./syncAppium.sh</string>
         	</array>
 		<key>WorkingDirectory</key>
 		<string>/Users/build/tools/mcloud</string>
@@ -27,12 +27,12 @@
 		<true/>
 
 		<key>StartInterval</key>
- 		<integer>5</integer>
+ 		<integer>10</integer>
 
 		<key>StandardErrorPath</key>
-		<string>/Users/build/tools/mcloud/logs/agent_devices.log</string>
+		<string>logs/agents.log</string>
 		<key>StandardOutPath</key>
-		<string>/Users/build/tools/mcloud/logs/agent_devices.log</string>
+		<string>logs/agents.log</string>
 	</dict>
 </plist>
 
