--- a/LaunchAgents/syncDevices.plist
+++ b/LaunchAgents/syncDevices.plist
@@ -9,10 +9,10 @@
 			<string>/bin:/usr/bin:/usr/local/bin:/usr/sbin:/sbin</string>
 		</dict>
 		<key>Label</key>
-		<string>com.syncAppiumNodes</string>
+		<string>com.zebrunner.mcloud.devices</string>
 		<key>ProgramArguments</key>
 		<array>
-                	<string>/Users/build/tools/mcloud/syncAppium.sh</string>
+                	<string>./syncDevices.sh</string>
         	</array>
 		<key>WorkingDirectory</key>
 		<string>/Users/build/tools/mcloud</string>
@@ -27,12 +27,12 @@
 		<true/>
 
 		<key>StartInterval</key>
- 		<integer>10</integer>
+ 		<integer>5</integer>
 
 		<key>StandardErrorPath</key>
-		<string>/Users/build/tools/mcloud/logs/agent_appium.log</string>
+		<string>logs/agents.log</string>
 		<key>StandardOutPath</key>
-		<string>/Users/build/tools/mcloud/logs/agent_appium.log</string>
+		<string>logs/agents.log</string>
 	</dict>
 </plist>
 
