minor configuration cleanup

--- a/.env.original
+++ b/.env.original
@@ -1,17 +1,17 @@
 # MCloud STF master host settings
-export STF_MASTER_HOST=stage.qaprosoft.com
+STF_MASTER_HOST=stage.qaprosoft.com
 export RETHINKDB_PORT_28015_TCP="tcp://${STF_MASTER_HOST}:28015"
 
 # MCloud Selenim Grid settings:
-export HUB_HOST=${STF_MASTER_HOST}
-export HUB_PORT=4446
+HUB_HOST=${STF_MASTER_HOST}
+HUB_PORT=4446
 
 # MCloud iOS STF node host settings
-export STF_NODE_HOST=192.168.88.96
+STF_NODE_HOST=192.168.88.96
 
-export APPIUM_HOME=/usr/local/lib/node_modules/appium
-export AUTOMATION_NAME=XCUITest
+APPIUM_HOME=/usr/local/lib/node_modules/appium
+AUTOMATION_NAME=XCUITest
 
-export WEBSOCKET_PROTOCOL=ws
-export WEB_PROTOCOL=http
+WEBSOCKET_PROTOCOL=ws
+WEB_PROTOCOL=http
 
