--- a/.env.original
+++ b/.env.original
@@ -1,5 +1,7 @@
 # MCloud STF master host settings
-STF_MASTER_HOST=stage.qaprosoft.com
+STF_MASTER_HOST=stf_master_host_value
+STF_MASTER_PORT=80
+
 export RETHINKDB_PORT_28015_TCP="tcp://${STF_MASTER_HOST}:28015"
 
 # MCloud Selenim Grid settings:
@@ -7,9 +9,9 @@ HUB_HOST=${STF_MASTER_HOST}
 HUB_PORT=4446
 
 # MCloud iOS STF node host settings
-STF_NODE_HOST=192.168.88.96
+STF_NODE_HOST=node_host_value
 
-APPIUM_HOME=/usr/local/lib/node_modules/appium
+APPIUM_HOME=appium_path_value
 AUTOMATION_NAME=XCUITest
 
 WEBSOCKET_PROTOCOL=ws
