#99: asked about node name to register as device location in STF

--- a/.env.original
+++ b/.env.original
@@ -10,6 +10,7 @@ HUB_PORT=4446
 
 # MCloud iOS STF node host settings
 STF_NODE_HOST=node_host_value
+STF_NODE_NAME=node_name_value
 
 APPIUM_HOME=appium_path_value
 AUTOMATION_NAME=XCUITest
