--- a/.env.original
+++ b/.env.original
@@ -18,3 +18,6 @@ AUTOMATION_NAME=XCUITest
 WEBSOCKET_PROTOCOL=ws
 WEB_PROTOCOL=http
 
+WDA_HOST=localhost
+WDA_BUNDLEID=com.facebook.WebDriverAgentRunner.xctrunner
+WDA_WAIT_TIMEOUT=30
