improved tvOS detection and added possibility to use direct TCP address for stf master

--- a/.env.original
+++ b/.env.original
@@ -1,11 +1,12 @@
 # MCloud STF master host settings
 STF_MASTER_HOST=stf_master_host_value
+TCP_STF_MASTER_HOST=stf_master_host_value
 STF_MASTER_PORT=80
 
-export RETHINKDB_PORT_28015_TCP="tcp://${STF_MASTER_HOST}:28015"
+export RETHINKDB_PORT_28015_TCP="tcp://${TCP_STF_MASTER_HOST}:28015"
 
 # MCloud Selenim Grid settings:
-HUB_HOST=${STF_MASTER_HOST}
+HUB_HOST=${TCP_STF_MASTER_HOST}
 HUB_PORT=4446
 
 # MCloud iOS STF node host settings
